fix for FB comments on mobile

--- a/views/_post.css
+++ b/views/_post.css
@@ -66,6 +66,8 @@
   display: block;
   width: 500px;
   margin: 0 auto;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 @media all and (min-width: 800px){
